modify page not found md

--- a/_pages/404.md
+++ b/_pages/404.md
@@ -3,5 +3,5 @@ title: "Page Not Found"
 layout: single  
 excerpt: "Page not found!!! Sorry."  
 sitemap: false
-permalink: /404/html  
+permalink: /404.html  
 ---
