modify page not found md 2

--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,7 +1,9 @@
 ---
-title: "Page Not Found"  
+title: ""  
 layout: single  
-excerpt: "Page not found!!! Sorry."  
 sitemap: false
 permalink: /404.html  
 ---
+
+# 404  
+### Page Not Found  
